--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,19 +1,24 @@
 {
   "name": "frontend",
   "version": "0.1.0",
-  "proxy": "http://localhost:3000",
+  "proxy": "http://127.0.0.1:8000/",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
+    "babel-eslint": "^10.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.0.1",
+    "semantic-ui-react": "^0.87.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "nodemon index.js --ignore client"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -29,5 +34,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {}
 }
